--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,3 +18,68 @@
     width: 100%;
     margin: 0 auto;
 }
+
+// MEDIA QUERIE CELULARES
+
+@media(max-width: 450px){
+    
+
+
+    .about {
+        .container {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    .projects{
+        &__title{
+            font-size: 40px;
+        }
+    }
+
+    .footer {
+        &__links {
+            display: block;
+
+            &__item{
+                margin-bottom: 12px;
+            }
+
+            &__img{
+                max-width: 20px;
+            }
+        }
+
+        
+    }
+}
+
+//MEDIA QUERIE TABLETS
+
+@media(min-width: 451px) and (max-width:830px) {
+    .about {
+        &__title{
+            font-size: 26px;
+        }
+    }
+
+    .projects {
+        &__title {
+            font-size: 40px;
+        }
+    }
+
+    .footer {
+        
+        &__links {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            &__item {
+                margin-bottom: 12px;
+            }
+        }
+    }
+}
