--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,6 +30,10 @@
             display: flex;
             flex-direction: column;
         }
+
+        &__img {
+            object-fit: cover;
+        }
     }
 
     .projects{
